feat: add more functions in numpy & pandas useful function study code

--- a/group_study/numpy_pandas.ipynb
+++ b/group_study/numpy_pandas.ipynb
@@ -206,6 +206,7 @@
     "# False로 초기화된 마스크 생성\n",
     "mask = np.zeros(30, dtype=bool)\n",
     "print(mask)\n",
+    "\n",
     "# 조건에 따라 마스크 업데이트\n",
     "mask[data > 50] = True  # 50보다 큰 값들만 True로 변경\n",
     "\n",
@@ -322,10 +323,6 @@
     "# np.broadcast_to - 메모리 복사 없이 배열을 확장하여 대용량 데이터 처리 시 메모리 효율성을 극대화\n",
     "broadcasted = np.broadcast_to(small_array, (4, 3))\n",
     "print(f'{broadcasted}\\n')\n",
-    "# 출력: [[1 2 3]\n",
-    "#        [1 2 3]\n",
-    "#        [1 2 3]\n",
-    "#        [1 2 3]]\n",
     "\n",
     "# 메모리 공유 확인\n",
     "print(np.shares_memory(small_array, broadcasted))  # True!"
@@ -364,11 +361,6 @@
     "time_series = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
     "windowed = sliding_window_view(time_series, window_shape=3)\n",
     "print(f'{windowed}\\n')\n",
-    "# 출력: [[1 2 3]\n",
-    "#        [2 3 4]\n",
-    "#        [3 4 5]\n",
-    "#        ...\n",
-    "#        [8 9 10]]\n",
     "\n",
     "# 각 윈도우의 평균 계산\n",
     "window_means = np.mean(windowed, axis=0)\n",
@@ -444,15 +436,23 @@
    "cell_type": "code",
    "source": [
     "# 신호 주파수 분석\n",
-    "t = np.linspace(0, 1, 100)\n",
-    "signal = np.sin(2 * np.pi * 2 * t) + 0.5 * np.sin(2 * np.pi * 5 * t)\n",
+    "t = np.linspace(0, 1, 100) # 0부터 1까지의 구간을 100개의 동일한 간격으로 나눈 숫자 배열 t를 생성(= 신호의 시간 축 생성)\n",
+    "signal = np.sin(2 * np.pi * 2 * t) + 0.5 * np.sin(2 * np.pi * 5 * t) # 주파수가 2Hz인 사인파와 주파수가 5Hz이고 진폭이 첫 번째 파의 절반인 사인파를 결합하여 새로운 신호를 생성\n",
+    "\n",
     "# np.fft.fft() - 고속 푸리에 변환(신호 처리, 이미지 분석, 오디오 처리에서 주파수 도메인 분석에 필수)\n",
+    "# FFT는 신호를 시간 도메인에서 주파수 도메인으로 변환하여 신호를 구성하는 주파수 성분들을 분석할 수 있게 함\n",
     "fft_result = np.fft.fft(signal)\n",
+    "# FFT 결과의 각 성분에 해당하는 주파수를 계산\n",
+    "# len(signal)은 신호의 데이터 포인트 수(100)\n",
+    "# t[1] - t[0]은 샘플링 간격(시간 축에서 연속된 두 점 사이의 간격)\n",
     "frequencies = np.fft.fftfreq(len(signal), t[1] - t[0])\n",
     "\n",
     "# 주요 주파수 성분 추출\n",
-    "dominant_freq_idx = np.argsort(np.abs(fft_result))[-4:]\n",
-    "dominant_freqs = frequencies[dominant_freq_idx]\n",
+    "# np.abs(fft_result)는 FFT 결과(복소수)의 크기를 계산하여 각 주파수 성분의 강도를 나타냄\n",
+    "# np.argsort()는 주파수 강도를 오름차순으로 정렬하고 해당 인덱스를 반환.\n",
+    "# [-4:]는 가장 큰 4개의 값을 선택. 실수 신호의 FFT 결과는 대칭적이므로 각 주파수가 양수와 음수 두 번 나타나기 때문에 4개를 선택합니다.\n",
+    "dominant_freq_idx = np.argsort(np.abs(fft_result))[-4:] # 가장 영향력 있는 주파수 성분의 인덱스를 찾기\n",
+    "dominant_freqs = frequencies[dominant_freq_idx] #  이전 단계에서 찾은 인덱스를 사용하여 frequencies 배열에서 실제 주파수 값을 가져오기\n",
     "print(f\"주요 주파수: {np.abs(dominant_freqs[dominant_freqs > 0]).round(1)} Hz\")"
    ],
    "id": "69f0a333f3ca63f",
@@ -539,13 +539,13 @@
    "cell_type": "code",
    "source": [
     "# 컬럼 선택\n",
-    "ages = df['age']  # 단일 컬럼\n",
-    "subset = df[['name', 'age']]  # 복수 컬럼\n",
+    "ages = df['age']  # 단일\n",
+    "subset = df[['name', 'age']]  # 복수\n",
     "print(f'{ages}\\n\\n{subset}\\n')\n",
     "\n",
     "# 인덱싱\n",
     "row_data = df.loc[0]  # 라벨 기반\n",
-    "cell_value = df.iloc[0, 1]  # 위치 기반\n",
+    "cell_value = df.iloc[0, 1]  # 특정 위치 기반\n",
     "print(f'{row_data}\\n\\ncell_value: {cell_value}\\n')\n",
     "\n",
     "# 9. apply() - 사용자 정의 함수 적용\n",
@@ -688,7 +688,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# pd.eval() & pd.query() - 대용량 데이터에서 NumExpr 엔진을 활용해 일반 pandas 연산보다 2-10배 빠른 성능\n",
+    "# pd.eval() & pd.query() - 대용량 데이터에서 NumExpr 엔진을 활용해 일반 pandas 연산보다 2~10배 빠른 성능\n",
     "\n",
     "# 대용량 데이터프레임\n",
     "df = pd.DataFrame({\n",
@@ -778,6 +778,7 @@
     "# 다차원 인덱스 생성\n",
     "regions = ['North', 'South', 'East']\n",
     "products = ['A', 'B']\n",
+    "# pd.MultiIndex.from_product() - 여러개의 리스트나 배열의 모든 요소를 데카르트 곱을 하여 계층적 인덱스 생성\n",
     "index = pd.MultiIndex.from_product([regions, products], names=['Region', 'Product'])\n",
     "print(f'\\n\\n{index}\\n')\n",
     "\n",
@@ -872,6 +873,7 @@
     "\n",
     "# 그룹별 Z-score 정규화\n",
     "sample_df['z_score'] = sample_df.groupby('group')['value'].transform(\n",
+    "    # Z-score 공식, 그룹 내의 각 데이터 포인트(x의 각 요소)가 해당 그룹의 평균으로부터 표준편차의 몇 배만큼 떨어져 있는지를 계산\n",
     "    lambda x: (x - x.mean()) / x.std()\n",
     ")\n",
     "print(f'\\n\\n{sample_df}\\n')\n",
@@ -1015,11 +1017,13 @@
     "# 다양한 윈도우 함수 적용\n",
     "ts_data['rolling_mean'] = ts_data['value'].rolling(window=7).mean()\n",
     "ts_data['rolling_std'] = ts_data['value'].rolling(window=7).std()\n",
+    "# expanding() - 시계열 데이터의 시작점부터 현재 데이터 지점까지의 모든 데이터를 포함하는 \"윈도우\"를 만들어 계산하는 방식(rolling과의 차이점)\n",
     "ts_data['expanding_mean'] = ts_data['value'].expanding().mean()\n",
     "print(f'\\n\\n{ts_data}\\n')\n",
     "\n",
     "# 사용자 정의 윈도우 함수\n",
     "def rolling_zscore(series):\n",
+    "    # 데이터가 1개일 경우, 퍼져있는 정도(산포도) 측정불가. 이 경우 std는 0이 되거나 정의되지 않아, NaN(Not a Number) 또는 0으로 나누기 오류발생하므로 if(series)>1 else 0 조건 처리\n",
     "    return (series.iloc[-1] - series.mean()) / series.std() if len(series) > 1 else 0\n",
     "\n",
     "ts_data['rolling_zscore'] = ts_data['value'].rolling(window=7).apply(rolling_zscore)\n",
@@ -1117,7 +1121,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# pd.melt() - Wide to Long 변환. 시각화와 통계 분석을 위해 데이터 형태를 재구성에 활용\n",
+    "# pd.melt() - Wide to Long 변환. 여러 열에 걸쳐 있던 값을 하나의 열로 모으고, 원래 열 이름을를 또 다른 열로 만들어, 데이터를 더 다루기 쉽고 분석에 용이한 형태로 재구성하는 기능(시각화와 통계 분석을 위해 데이터 형태를 재구성에 활용)\n",
     "\n",
     "# Wide 형태 데이터\n",
     "wide_data = pd.DataFrame({\n",
@@ -1129,12 +1133,12 @@
     "})\n",
     "print(f'\\n\\n{wide_data}\\n')\n",
     "\n",
-    "# Long 형태로 변환\n",
+    "# Long 형태로 변환(단일컬럼)\n",
     "long_data = pd.melt(\n",
     "    wide_data,\n",
-    "    id_vars=['ID', 'Name'],\n",
-    "    var_name='Quarter',\n",
-    "    value_name='Score'\n",
+    "    id_vars=['ID', 'Name'], # 고유 식별자 변수로서, ID와 Name은 형태를 유지하며 기준 축 역할을 함.\n",
+    "    var_name='Quarter', # melt한 열들의 이름 지정\n",
+    "    value_name='Score' # melt한 열들의 값을 담을 새로운 열 이름 지정\n",
     ")\n",
     "print(f'\\n\\n{long_data}\\n')"
    ],
@@ -1172,15 +1176,72 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2025-09-07T01:50:13.935382Z",
+     "start_time": "2025-09-07T01:50:13.923068Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Wide to Long 변환 멀티 컬럼. (pd.melt + 문자열 처리로도 가능하지만, 직접적인 가공이 필요.)\n",
+    "import io\n",
+    "\n",
+    "# 예시 데이터 생성\n",
+    "csv_data = \"\"\"Year,Country,Nominal_Q1,Real_Q1,Core_Q1,Nominal_Q2,Real_Q2,Core_Q2\n",
+    "2023,USA,7.0,2.0,5.5,8.5,2.5,6.5\n",
+    "2023,KOR,5.0,1.5,4.0,6.0,2.0,5.0\n",
+    "\"\"\"\n",
+    "wide_df = pd.read_csv(io.StringIO(csv_data))\n",
+    "\n",
+    "# wide_to_long을 사용하여 변환\n",
+    "long_df = pd.wide_to_long(\n",
+    "    df=wide_df,\n",
+    "    stubnames=['Nominal', 'Real', 'Core'], # 값으로 사용할 열들의 접두사\n",
+    "    i=['Year', 'Country'],                # 고유 식별자\n",
+    "    j='Quarter',                          # 접미사를 담을 새 열 이름\n",
+    "    sep='_',                              # 접두사와 접미사의 구분자\n",
+    "    suffix=r'\\w+'                         # 접미사의 형태 (정규표현식)\n",
+    ").reset_index()\n",
+    "\n",
+    "print(long_df)"
+   ],
+   "id": "15c33acffd63b9d4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Year Country Quarter  Nominal  Real  Core\n",
+      "0  2023     USA      Q1      7.0   2.0   5.5\n",
+      "1  2023     USA      Q2      8.5   2.5   6.5\n",
+      "2  2023     KOR      Q1      5.0   1.5   4.0\n",
+      "3  2023     KOR      Q2      6.0   2.0   5.0\n"
+     ]
+    }
+   ],
+   "execution_count": 173
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2025-09-07T01:15:40.245453Z",
      "start_time": "2025-09-07T01:15:40.239822Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# SVD - 데이터(행렬)를 구성하는 핵심 성분과 그 중요도를 순서대로 분해하는 작업\n",
+    "# 목적\n",
+    "# 1.차원 축소 (Dimensionality Reduction) 및 데이터 압축. 특이값은 중요도 순으로 정렬되어 있으므로, 값이 매우 작은 특이값들을 0으로 처리하고(무시하고) 데이터를 재구성하면, 원본 데이터와 매우 유사하면서도 훨씬 적은 정보(차원)로 표현된 데이터를 얻을 수 있음\n",
+    "# 2.노이즈 제거 (Noise Reduction)\n",
+    "# 3.잠재 의미 분석 (Latent Semantic Analysis, LSA) - 추천 시스템이나 자연어 처리에서 사용됩니다. 예를 들어, '사용자-영화 평점' 행렬을 SVD로 분해하면, 눈에 보이지 않던 사용자의 잠재적인 취향(예: 'SF 영화 팬', '로맨틱 코미디 선호')이나 영화의 잠재적인 장르 특성을 U와 V 행렬을 통해 발견할 수 있음\n",
+    "\n",
     "# np.linalg.svd() - 특이값 분해\n",
     "\n",
     "A = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]], dtype=float)\n",
+    "# A - 분석하기 위한 원본 데이터 행렬 (m x n 크기)\n",
+    "# U: 왼쪽 특이벡터(Left Singular Vectors) 행렬 (m x m 크기)로서, A의 열(column) 공간에 대한 중요한 방향(축)들을 나타냄. 이 방향들은 서로 직교(orthogonal)해야함. 즉, 데이터의 출력 공간(output space)을 설명하는 새로운 좌표축이라고 생각할 수 있음\n",
+    "# Σ (시그마) - 특이값(Singular Values)을 대각선에 담고 있는 행렬 (m x n 크기)로서, U와 V에 있는 각 방향(축)이 원본 데이터 A를 설명하는 데 얼마나 중요한지를 나타내는 중요도\n",
+    "# Vᵀ- 오른쪽 특이벡터(Right Singular Vectors)의 전치행렬 (n x n 크기)로서, A의 행(row) 공간에 대한 **중요한 방향(축)**들을 나타냄. 이 방향들 역시 서로 직교합니다. 데이터의 입력 공간(input space)을 설명하는 새로운 좌표축으로 볼 수 있음\n",
     "print(\"SVD 분해: A = U * Σ * V^T\")\n",
     "\n",
     "U, s, Vt = np.linalg.svd(A)\n",
@@ -1266,8 +1327,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T01:17:16.499354Z",
-     "start_time": "2025-09-07T01:17:16.492910Z"
+     "end_time": "2025-09-07T02:05:48.645029Z",
+     "start_time": "2025-09-07T02:05:48.639708Z"
     }
    },
    "cell_type": "code",
@@ -1286,13 +1347,25 @@
     "print(f\"구간 너비: {bin_width}\")\n",
     "print(f\"구간 경계: {bin_edges}\")\n",
     "\n",
+    "# cut() - 동일 너비\n",
+    "print(\"\\npd.cut() 사용:\")\n",
+    "cut_result, bin_edges = pd.cut(data, bins=4, retbins=True)\n",
+    "print(f\"계산된 구간 경계: {bin_edges}\")\n",
+    "print(f\"각 데이터가 속한 구간:\\n{cut_result}\")\n",
+    "\n",
     "# qcut() - 동일 빈도\n",
     "print(\"\\npd.qcut() 알고리즘:\")\n",
     "quantiles = np.linspace(0, 1, n_bins + 1)\n",
     "quantile_edges = np.quantile(data, quantiles)\n",
-    "\n",
     "print(f\"분위수: {quantiles}\")\n",
-    "print(f\"분위수 값: {quantile_edges}\")"
+    "print(f\"분위수 값: {quantile_edges}\")\n",
+    "\n",
+    "# qcut() - 동일 빈도\n",
+    "print(\"\\npd.qcut() 사용:\")\n",
+    "qcut_result, quantile_edges = pd.qcut(data, q=4, retbins=True)\n",
+    "print(f\"계산된 분위수 경계: {quantile_edges}\")\n",
+    "print(f\"각 데이터가 속한 구간:\\n{qcut_result}\")\n",
+    "\n"
    ],
    "id": "834c17de6770689e",
    "outputs": [
@@ -1304,13 +1377,25 @@
       "구간 너비: 12.5\n",
       "구간 경계: [20.  32.5 45.  57.5 70. ]\n",
       "\n",
+      "pd.cut() 사용:\n",
+      "계산된 구간 경계: [19.95 32.5  45.   57.5  70.  ]\n",
+      "각 데이터가 속한 구간:\n",
+      "[(19.95, 32.5], (19.95, 32.5], (32.5, 45.0], (32.5, 45.0], (32.5, 45.0], (45.0, 57.5], (45.0, 57.5], (57.5, 70.0], (57.5, 70.0], (57.5, 70.0]]\n",
+      "Categories (4, interval[float64, right]): [(19.95, 32.5] < (32.5, 45.0] < (45.0, 57.5] < (57.5, 70.0]]\n",
+      "\n",
       "pd.qcut() 알고리즘:\n",
       "분위수: [0.   0.25 0.5  0.75 1.  ]\n",
-      "분위수 값: [20.   36.25 47.5  58.75 70.  ]\n"
+      "분위수 값: [20.   36.25 47.5  58.75 70.  ]\n",
+      "\n",
+      "pd.qcut() 사용:\n",
+      "계산된 분위수 경계: [20.   36.25 47.5  58.75 70.  ]\n",
+      "각 데이터가 속한 구간:\n",
+      "[(19.999, 36.25], (19.999, 36.25], (19.999, 36.25], (36.25, 47.5], (36.25, 47.5], (47.5, 58.75], (47.5, 58.75], (58.75, 70.0], (58.75, 70.0], (58.75, 70.0]]\n",
+      "Categories (4, interval[float64, right]): [(19.999, 36.25] < (36.25, 47.5] < (47.5, 58.75] < (58.75, 70.0]]\n"
      ]
     }
    ],
-   "execution_count": 171
+   "execution_count": 178
   },
   {
    "metadata": {
@@ -1357,14 +1442,6 @@
     }
    ],
    "execution_count": 172
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "82781de2db406e09"
   }
  ],
  "metadata": {
