feat: add useful numpy functions

--- a/group_study/numpy_pandas.ipynb
+++ b/group_study/numpy_pandas.ipynb
@@ -119,8 +119,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-05T07:15:08.308594Z",
-     "start_time": "2025-09-05T07:15:08.305847Z"
+     "end_time": "2025-09-08T00:07:10.294429Z",
+     "start_time": "2025-09-08T00:07:10.289814Z"
     }
    },
    "cell_type": "code",
@@ -142,12 +142,12 @@
        "       [ 9, 10, 11]])"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 116
+   "execution_count": 180
   },
   {
    "metadata": {
@@ -168,7 +168,46 @@
     "# np.where(arr > 4, arr, 0)\n",
     "# np.random.normal() # 정규분포 난수\n",
     "np.random.normal(0, 1, 30) # 평균 0, 표준편차 1\n",
-    "# np.dot(np.arange(12).reshape(3, 4), arr)"
+    "# np.dot(np.arange(12).reshape(3, 4), arr)\n",
+    "\n",
+    "# 기타 numpy 함수들\n",
+    "# 1. 산술 연산 함수\n",
+    "# np.add(a, b)\n",
+    "# np.subtract(a, b)\n",
+    "# np.multiply(a, b) | a * b | 각 요소별로 곱셈을 수행합\n",
+    "# np.divide(a, b) | a / b | 각 요소별로 나눗셈을 수행 (결과는 항상 float)\n",
+    "# np.floor_divide(a, b) | a // b | 각 요소별로 나눗셈의 정수 몫\n",
+    "# np.power(a, b) | a ** b | 각 요소별로 a의 b 제곱을 계산\n",
+    "# np.abs(a) 각 요소의 절댓값\n",
+    "# np.negative(a) 각 요소의 부호 반전\n",
+    "\n",
+    "# 2. 삼각함수\n",
+    "#  np.sin(a), np.cos(a), np.tan(a)\n",
+    "#  np.arcsin(a), np.arccos(a), np.arctan(a)\n",
+    "#  np.hypot(a, b) | sqrt(a**2 + b**2) 와 동일, 유클리드 거리를 계산\n",
+    "\n",
+    "# 3. 비교 및 논리 연산 함수(True/False 배열로 반환)\n",
+    "#  np.equal(a, b) 두 요소가 같은지 비교\n",
+    "#  np.not_equal(a, b) 두 요소가 다른지 비교\n",
+    "#  np.less(a, b) a가 b보다 작은지 비교\n",
+    "#  np.less_equal(a, b) | a <= b | a가 b보다 작거나 같은지 비교\n",
+    "#  np.greater(a, b) | a > b | a가 b보다 큰지 비교\n",
+    "#  np.greater_equal(a, b) | a >= b | a가 b보다 크거나 같은지 비교\n",
+    "#  np.logical_and(a, b) 두 요소가 모두 True인지 확인\n",
+    "#  np.logical_or(a, b) 두 요소 중 하나라도 True인지 확인\n",
+    "#  np.logical_not(a) 각 요소의 논리값을 반전 (True -> False)\n",
+    "#  np.isnan(a) 각 요소가 NaN(Not a Number)인지 확인\n",
+    "#  np.isinf(a) 각 요소가 무한대(infinity)인지 확인\n",
+    "\n",
+    "# 기타 numpy 수학함수\n",
+    "# np.sqrt(a) 각 요소의 제곱근을 계산\n",
+    "# np.exp(a) 각 요소의 지수 함수(e^a) 값을 계산\n",
+    "# np.log(a), np.log10(a), np.log2(a) 자연로그, 상용로그(밑 10), 이진로그(밑 2)를 계산\n",
+    "# np.ceil(a) 올림 연산\n",
+    "# np.floor(a) 내림 연산\n",
+    "# np.round(a, decimals=n) 각 요소를 소수점 n자리까지 반올림\n",
+    "# np.maximum(a, b), np.minimum(a, b) 두 배열의 각 요소를 비교하여 더 큰 값 또는 더 작은 값 선택\n",
+    "# np.clip(a, min, max) 배열 a의 값을 min보다 작으면 min, max보다 크면 max로 제한"
    ],
    "id": "6eeba0f94b06c7fa",
    "outputs": [
