feat: add comments for Fourier Theorem

--- a/group_study/numpy_pandas.ipynb
+++ b/group_study/numpy_pandas.ipynb
@@ -275,11 +275,37 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-05T07:44:56.825906Z",
-     "start_time": "2025-09-05T07:44:56.822793Z"
+     "end_time": "2025-09-08T00:36:58.851846Z",
+     "start_time": "2025-09-08T00:36:58.844509Z"
     }
    },
    "cell_type": "code",
+   "source": [
+    "# np.einsum() - Einstein Summation Convention 다차원 배열(텐서) 연산을 정의하고 실행\n",
+    "# 가능 연산 리스트 - 행렬 곱셈, 전치 행렬, 대각합(Trace), 배열의 합, 배열의 곱, 텐서 곱, 텐서 축소 등 복잡한 모든 연산(복잡한 연산의 경우나 연산이 2~3개 이상 묶여있을때 np 보다 빠름. 단순 행렬곱/요소별 곱/단순합은 np 가 빠름)\n",
+    "\n",
+    "# 행렬 곱셈을 einsum으로\n",
+    "A = np.array([[1, 2], [3, 4]])\n",
+    "B = np.array([[5, 6], [7, 8]])\n",
+    "result = np.einsum('ij,jk->ik', A, B) # np.einsum() 는 문자열로 된 수식을 받아서 연산\n",
+    "print(result)\n",
+    "\n",
+    "# 복잡한 텐서 연산 - 배치 행렬 곱셈\n",
+    "batch_A = np.random.rand(3, 2, 2)\n",
+    "batch_B = np.random.rand(3, 2, 2)\n",
+    "batch_result = np.einsum('bij,bjk->bik', batch_A, batch_B)\n",
+    "# 배치 크기 3에서 각각 2x2 행렬곱 수행\n",
+    "print(f'\\n\\n---batch_A ---\\n{batch_A}')\n",
+    "print(f'\\n\\n---batch_B ---\\n{batch_B}')\n",
+    "print(f'\\n\\n---batch_result ---\\n{batch_result}')\n",
+    "\n",
+    "# 전치행렬 'ij->ji' : (i,j) 인덱스를 (j,i)로 바꿈\n",
+    "transpose_A = np.einsum('ij->ji', A)\n",
+    "print(f\"einsum 전치 행렬:\\n{transpose_A}\")\n",
+    "# np.einsum('ii->', C)는 대각합 구하기\n",
+    "# np.einsum('ii', A) 대각행렬 (A.diagonal() 보다 빠름)"
+   ],
+   "id": "3d3d8c2660f2be30",
    "outputs": [
     {
      "name": "stdout",
@@ -290,63 +316,43 @@
       "\n",
       "\n",
       "---batch_A ---\n",
-      "[[[0.47223315 0.11948858]\n",
-      "  [0.25363371 0.41065016]]\n",
+      "[[[0.66811029 0.34991841]\n",
+      "  [0.34137018 0.7947765 ]]\n",
       "\n",
-      " [[0.86241702 0.00349007]\n",
-      "  [0.29073748 0.71298443]]\n",
+      " [[0.84811396 0.18609525]\n",
+      "  [0.28706422 0.90382691]]\n",
       "\n",
-      " [[0.99711196 0.23620652]\n",
-      "  [0.9478744  0.47901527]]]\n",
+      " [[0.20997255 0.67639078]\n",
+      "  [0.68266029 0.45554966]]]\n",
       "\n",
       "\n",
       "---batch_B ---\n",
-      "[[[0.00687013 0.36164277]\n",
-      "  [0.34973817 0.38229702]]\n",
+      "[[[0.40588436 0.88621675]\n",
+      "  [0.68019789 0.1774999 ]]\n",
       "\n",
-      " [[0.10990699 0.80157972]\n",
-      "  [0.74597995 0.00791478]]\n",
+      " [[0.7268249  0.363909  ]\n",
+      "  [0.92207687 0.41413495]]\n",
       "\n",
-      " [[0.33910927 0.82163832]\n",
-      "  [0.56101606 0.99955991]]]\n",
+      " [[0.78484155 0.06620748]\n",
+      "  [0.94751316 0.883315  ]]]\n",
       "\n",
       "\n",
       "---batch_result ---\n",
-      "[[[0.04503402 0.21645984]\n",
-      "  [0.14536253 0.24871513]]\n",
+      "[[[0.50918928 0.65420101]\n",
+      "  [0.67916212 0.44360072]]\n",
       "\n",
-      " [[0.09738918 0.69132361]\n",
-      "  [0.56382617 0.23869238]]\n",
+      " [[0.78802448 0.38570485]\n",
+      "  [1.04204331 0.47877157]]\n",
       "\n",
-      " [[0.47064556 1.05536796]\n",
-      "  [0.59016825 1.25761439]]]\n"
+      " [[0.80568435 0.61136787]\n",
+      "  [0.96741946 0.44759107]]]\n",
+      "einsum 전치 행렬:\n",
+      "[[1 3]\n",
+      " [2 4]]\n"
      ]
     }
    ],
-   "execution_count": 139,
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "# np.einsum() - Einstein Summation Convention\n",
-    "\n",
-    "# 행렬 곱셈을 einsum으로\n",
-    "A = np.array([[1, 2], [3, 4]])\n",
-    "B = np.array([[5, 6], [7, 8]])\n",
-    "result = np.einsum('ij,jk->ik', A, B)\n",
-    "print(result)\n",
-    "# 출력: [[19 22]\n",
-    "#        [43 50]]\n",
-    "\n",
-    "# 복잡한 텐서 연산 - 배치 행렬 곱셈\n",
-    "batch_A = np.random.rand(3, 2, 2)\n",
-    "batch_B = np.random.rand(3, 2, 2)\n",
-    "batch_result = np.einsum('bij,bjk->bik', batch_A, batch_B)\n",
-    "# 배치 크기 3에서 각각 2x2 행렬곱 수행\n",
-    "print(f'\\n\\n---batch_A ---\\n{batch_A}')\n",
-    "print(f'\\n\\n---batch_B ---\\n{batch_B}')\n",
-    "print(f'\\n\\n---batch_result ---\\n{batch_result}')"
-   ],
-   "id": "3d3d8c2660f2be30"
+   "execution_count": 182
   },
   {
    "metadata": {
@@ -359,7 +365,7 @@
    "source": [
     "small_array = np.array([1, 2, 3])\n",
     "print(f'{small_array}\\n')\n",
-    "# np.broadcast_to - 메모리 복사 없이 배열을 확장하여 대용량 데이터 처리 시 메모리 효율성을 극대화\n",
+    "# np.broadcast_to - 메모리 복사 없이 배열을 확장하여 대용량 데이터 처리 시 메모리 효율성을 극대화. 단, 생성된 배열은 쓰기가 불가능한 읽기전용 뷰\n",
     "broadcasted = np.broadcast_to(small_array, (4, 3))\n",
     "print(f'{broadcasted}\\n')\n",
     "\n",
@@ -388,8 +394,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T00:55:55.215790Z",
-     "start_time": "2025-09-07T00:55:55.209945Z"
+     "end_time": "2025-09-08T01:13:13.055406Z",
+     "start_time": "2025-09-08T01:13:13.050185Z"
     }
    },
    "cell_type": "code",
@@ -419,27 +425,35 @@
       " [ 6  7  8]\n",
       " [ 7  8  9]\n",
       " [ 8  9 10]]\n",
+      "\n",
+      "[[ 1  2  3  4]\n",
+      " [ 2  3  4  5]\n",
+      " [ 3  4  5  6]\n",
+      " [ 4  5  6  7]\n",
+      " [ 5  6  7  8]\n",
+      " [ 6  7  8  9]\n",
+      " [ 7  8  9 10]]\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([4.5, 5.5, 6.5])"
+       "array([4., 5., 6., 7.])"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 148
+   "execution_count": 183
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T00:58:48.669765Z",
-     "start_time": "2025-09-07T00:58:48.662896Z"
+     "end_time": "2025-09-08T01:14:04.352476Z",
+     "start_time": "2025-09-08T01:14:04.348479Z"
     }
    },
    "cell_type": "code",
@@ -449,6 +463,7 @@
     "y = x**2\n",
     "gradient_y = np.gradient(y, x) # np.gradient() - 수치해석과 물리 시뮬레이션에서 미분 계산이 필요할 때 사용\n",
     "\n",
+    "print(f\"x = {x} \\ny = {y}\")\n",
     "print(f\"이론값 (2x): {(2*x).round(2)}\")\n",
     "print(f\"수치 미분: {gradient_y.round(2)}\")"
    ],
@@ -458,12 +473,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "x = [0.  0.5 1.  1.5 2.  2.5 3.  3.5 4.  4.5 5. ] \n",
+      "y = [ 0.    0.25  1.    2.25  4.    6.25  9.   12.25 16.   20.25 25.  ]\n",
       "이론값 (2x): [ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]\n",
       "수치 미분: [0.5 1.  2.  3.  4.  5.  6.  7.  8.  9.  9.5]\n"
      ]
     }
    ],
-   "execution_count": 149
+   "execution_count": 185
   },
   {
    "metadata": {
@@ -478,6 +495,7 @@
     "t = np.linspace(0, 1, 100) # 0부터 1까지의 구간을 100개의 동일한 간격으로 나눈 숫자 배열 t를 생성(= 신호의 시간 축 생성)\n",
     "signal = np.sin(2 * np.pi * 2 * t) + 0.5 * np.sin(2 * np.pi * 5 * t) # 주파수가 2Hz인 사인파와 주파수가 5Hz이고 진폭이 첫 번째 파의 절반인 사인파를 결합하여 새로운 신호를 생성\n",
     "\n",
+    "# 푸리에 정리(Fourier Theorem): 모든 주기적 함수는 서로 다른 주파수를 가진 사인파의 합으로 표현 가능\n",
     "# np.fft.fft() - 고속 푸리에 변환(신호 처리, 이미지 분석, 오디오 처리에서 주파수 도메인 분석에 필수)\n",
     "# FFT는 신호를 시간 도메인에서 주파수 도메인으로 변환하여 신호를 구성하는 주파수 성분들을 분석할 수 있게 함\n",
     "fft_result = np.fft.fft(signal)\n",
