--- a/group_study/numpy_pandas.ipynb
+++ b/group_study/numpy_pandas.ipynb
@@ -495,7 +495,7 @@
     "t = np.linspace(0, 1, 100) # 0부터 1까지의 구간을 100개의 동일한 간격으로 나눈 숫자 배열 t를 생성(= 신호의 시간 축 생성)\n",
     "signal = np.sin(2 * np.pi * 2 * t) + 0.5 * np.sin(2 * np.pi * 5 * t) # 주파수가 2Hz인 사인파와 주파수가 5Hz이고 진폭이 첫 번째 파의 절반인 사인파를 결합하여 새로운 신호를 생성\n",
     "\n",
-    "# 푸리에 정리(Fourier Theorem): 모든 주기적 함수는 서로 다른 주파수를 가진 사인파의 합으로 표현 가능\n",
+    "# 푸리에 정리(Fourier Theorem): 모든 주기적 함수는 서로 다른 주파수를 가진 사인파의 합으로 표현 가능하다. 즉, 모든 디지털 시계열 데이터는 푸리에 정리에 의해 주파수 성분으로 분해 가능하다.\n",
     "# np.fft.fft() - 고속 푸리에 변환(신호 처리, 이미지 분석, 오디오 처리에서 주파수 도메인 분석에 필수)\n",
     "# FFT는 신호를 시간 도메인에서 주파수 도메인으로 변환하여 신호를 구성하는 주파수 성분들을 분석할 수 있게 함\n",
     "fft_result = np.fft.fft(signal)\n",
