chore: modify comments

--- a/group_study/numpy_pandas.ipynb
+++ b/group_study/numpy_pandas.ipynb
@@ -485,8 +485,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T00:59:19.202549Z",
-     "start_time": "2025-09-07T00:59:19.101504Z"
+     "end_time": "2025-09-08T01:51:31.089858Z",
+     "start_time": "2025-09-08T01:51:31.084712Z"
     }
    },
    "cell_type": "code",
@@ -522,7 +522,7 @@
      ]
     }
    ],
-   "execution_count": 150
+   "execution_count": 187
   },
   {
    "metadata": {},
@@ -533,8 +533,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-05T07:08:20.219085Z",
-     "start_time": "2025-09-05T07:08:20.206145Z"
+     "end_time": "2025-09-08T01:52:00.268410Z",
+     "start_time": "2025-09-08T01:52:00.245778Z"
     }
    },
    "cell_type": "code",
@@ -584,13 +584,13 @@
      ]
     }
    ],
-   "execution_count": 89
+   "execution_count": 189
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T01:02:22.346758Z",
-     "start_time": "2025-09-07T01:02:22.340208Z"
+     "end_time": "2025-09-08T01:52:03.172956Z",
+     "start_time": "2025-09-08T01:52:03.161077Z"
     }
    },
    "cell_type": "code",
@@ -628,10 +628,9 @@
       "1      Bob   30\n",
       "2  Charlie   35\n",
       "\n",
-      "name            Alice\n",
-      "age                25\n",
-      "salary          50000\n",
-      "age_category    Young\n",
+      "name      Alice\n",
+      "age          25\n",
+      "salary    50000\n",
       "Name: 0, dtype: object\n",
       "\n",
       "cell_value: 25\n",
@@ -698,12 +697,12 @@
        "</div>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 154
+   "execution_count": 190
   },
   {
    "metadata": {
@@ -739,8 +738,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T01:04:05.609988Z",
-     "start_time": "2025-09-07T01:04:05.591228Z"
+     "end_time": "2025-09-08T01:53:08.801280Z",
+     "start_time": "2025-09-08T01:53:08.786996Z"
     }
    },
    "cell_type": "code",
@@ -754,7 +753,7 @@
     "    'C': np.random.randn(10000),\n",
     "    'category': np.random.choice(['X', 'Y', 'Z'], 10000)\n",
     "})\n",
-    "print(df)\n",
+    "# print(df)\n",
     "# eval()로 복잡한 연산 최적화 (NumExpr 엔진 사용)\n",
     "df['D'] = df.eval('A * B + C**2')\n",
     "print(f'\\n\\n{df}\\n')\n",
@@ -768,58 +767,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             A         B         C category\n",
-      "0    -0.764052  1.371044 -1.422681        X\n",
-      "1     0.370576  0.714923 -0.933745        Y\n",
-      "2    -0.766909 -0.457868  0.208545        Z\n",
-      "3     0.976870 -0.728505 -2.012161        Y\n",
-      "4    -0.472971 -0.782459 -0.746723        Y\n",
-      "...        ...       ...       ...      ...\n",
-      "9995  0.568243 -2.031136  0.551861        Z\n",
-      "9996  0.842827 -3.032821 -0.070290        Z\n",
-      "9997 -0.613677 -0.245133  0.324860        Z\n",
-      "9998  1.664018 -0.017434 -0.893055        Z\n",
-      "9999 -0.705668  0.671311 -0.700962        X\n",
-      "\n",
-      "[10000 rows x 4 columns]\n",
       "\n",
       "\n",
       "             A         B         C category         D\n",
-      "0    -0.764052  1.371044 -1.422681        X  0.976473\n",
-      "1     0.370576  0.714923 -0.933745        Y  1.136814\n",
-      "2    -0.766909 -0.457868  0.208545        Z  0.394634\n",
-      "3     0.976870 -0.728505 -2.012161        Y  3.337137\n",
-      "4    -0.472971 -0.782459 -0.746723        Y  0.927675\n",
+      "0     0.194801  0.597359  0.511209        Z  0.377701\n",
+      "1    -0.492770 -0.832287  0.623180        Y  0.798480\n",
+      "2    -0.618033  0.839862 -0.259444        Y -0.451751\n",
+      "3     0.975974 -1.709791 -1.288911        X -0.007419\n",
+      "4    -1.575234 -1.189572 -0.584033        Z  2.214949\n",
       "...        ...       ...       ...      ...       ...\n",
-      "9995  0.568243 -2.031136  0.551861        Z -0.849627\n",
-      "9996  0.842827 -3.032821 -0.070290        Z -2.551203\n",
-      "9997 -0.613677 -0.245133  0.324860        Z  0.255967\n",
-      "9998  1.664018 -0.017434 -0.893055        Z  0.768538\n",
-      "9999 -0.705668  0.671311 -0.700962        X  0.017626\n",
+      "9995 -0.442443  0.480031  0.281297        X -0.133258\n",
+      "9996  0.193042  0.149074  0.400926        Y  0.189519\n",
+      "9997 -0.406678  0.385190  0.481427        X  0.075124\n",
+      "9998  0.585258 -1.127497  0.021266        Y -0.659425\n",
+      "9999  0.197793 -1.356885 -0.661131        Y  0.168711\n",
       "\n",
       "[10000 rows x 5 columns]\n",
       "\n",
       "\n",
       "\n",
       "             A         B         C category         D\n",
-      "14    1.192807 -1.009994 -0.492386        X -0.962285\n",
-      "28    0.236623 -0.292135 -1.355936        X  1.769437\n",
-      "46    0.211802 -0.342588 -0.539375        X  0.218364\n",
-      "57    0.410221 -0.293889  0.780439        X  0.488526\n",
-      "60    1.295940 -0.090323 -1.088128        X  1.066970\n",
+      "3     0.975974 -1.709791 -1.288911        X -0.007419\n",
+      "7     0.643899 -0.634483 -0.464646        X -0.192647\n",
+      "14    1.771014 -0.450279 -0.087498        X -0.789794\n",
+      "77    1.657643 -2.114569  0.053377        X -3.502351\n",
+      "80    1.506853 -1.724077  0.509769        X -2.338067\n",
       "...        ...       ...       ...      ...       ...\n",
-      "9933  1.013342 -0.255048 -0.565250        X  0.061056\n",
-      "9945  0.093641 -0.164942 -0.750966        X  0.548504\n",
-      "9966  0.046635 -2.205336 -0.922217        X  0.747639\n",
-      "9969  0.384840 -1.586014 -0.047176        X -0.608136\n",
-      "9989  0.265177 -0.906200  0.435268        X -0.050844\n",
+      "9916  2.805310 -0.757459  0.346285        X -2.004994\n",
+      "9962  0.235622 -1.874617  0.654954        X -0.012737\n",
+      "9969  0.031973 -0.527046 -0.122179        X -0.001924\n",
+      "9973  0.027198 -1.068629  1.033408        X  1.038869\n",
+      "9991  1.407327 -1.070824 -1.334764        X  0.274597\n",
       "\n",
-      "[798 rows x 5 columns]\n",
+      "[796 rows x 5 columns]\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 156
+   "execution_count": 191
   },
   {
    "metadata": {
@@ -921,7 +906,6 @@
    "source": [
     "# df.transform() - 그룹별 변환 함수로서 그룹 내에서 데이터 정규화, 이상치 탐지, 상대적 순위 계산 등에 활용\n",
     "\n",
-    "# 그룹별 정규화 (Z-score)\n",
     "sample_df = pd.DataFrame({\n",
     "    'group': ['A', 'A', 'B', 'B', 'C', 'C'] * 5,\n",
     "    'value': np.random.randn(30)\n",
