chore: modify comments

--- a/group_study/numpy_pandas.ipynb
+++ b/group_study/numpy_pandas.ipynb
@@ -25,8 +25,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-05T07:09:47.893084Z",
-     "start_time": "2025-09-05T07:09:47.889332Z"
+     "end_time": "2025-09-08T04:51:32.887Z",
+     "start_time": "2025-09-08T04:51:32.884788Z"
     }
    },
    "cell_type": "code",
@@ -46,12 +46,12 @@
        "       [0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 93
+   "execution_count": 196
   },
   {
    "metadata": {
@@ -119,14 +119,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-08T00:07:10.294429Z",
-     "start_time": "2025-09-08T00:07:10.289814Z"
+     "end_time": "2025-09-08T04:51:04.648338Z",
+     "start_time": "2025-09-08T04:51:04.646261Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# np.arange(14)\n",
-    "# np.arange(0, 14, 2)\n",
+    "# arr = np.arange(14)\n",
+    "# arr = np.arange(0, 14, 2)\n",
     "arr = np.arange(12).reshape(4, 3)\n",
     "# arr = arr.reshape(-1)\n",
     "arr"
@@ -142,18 +142,18 @@
        "       [ 9, 10, 11]])"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 180
+   "execution_count": 194
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-05T07:39:30.458118Z",
-     "start_time": "2025-09-05T07:39:30.455401Z"
+     "end_time": "2025-09-08T04:53:31.274793Z",
+     "start_time": "2025-09-08T04:53:31.268819Z"
     }
    },
    "cell_type": "code",
@@ -214,20 +214,20 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.19330019,  0.88124547, -0.8707687 ,  0.81488346,  0.58645017,\n",
-       "       -0.55488937, -0.32322683, -0.12320271,  1.35406   ,  0.57612942,\n",
-       "       -1.73707828, -0.78038137, -0.41727292,  0.52887787, -1.66687497,\n",
-       "       -0.94241094,  0.42369966, -0.33425453, -0.41583465,  0.62863443,\n",
-       "        1.45376311,  0.97711017, -2.30115819, -0.02112213, -1.54907248,\n",
-       "        1.67597808, -0.9734414 ,  0.371848  ,  2.25211979,  1.37633686])"
+       "array([ 0.49683003, -0.92952305, -0.76888254,  0.57989768,  1.02523316,\n",
+       "       -0.66673015,  0.48036405,  0.49228994, -0.61659663, -0.12421675,\n",
+       "        0.07826554, -0.47011204, -0.34927411, -0.56968132,  1.27786558,\n",
+       "        0.98926949,  0.32842825,  1.20110822,  0.96061788, -0.77902759,\n",
+       "       -0.16020175,  0.40977676, -1.163856  , -0.29409081, -0.53364219,\n",
+       "       -0.3919995 , -2.04973866, -0.79026478,  0.50225622,  0.9077371 ])"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 131
+   "execution_count": 197
   },
   {
    "metadata": {
